# finmetrix

./: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
finmetrix/: __init__.py  _validation.py  _version.py  returns.py
finmetrix/_backend/: __init__.py
finmetrix/_backend/cpp/: bindings.cpp  twr.cpp  twr.hpp
tests/: test_backend_parity.py  test_performance.py  test_returns.py
