[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "finmetrix"
version = "0.0.0"
description = "Minimal, explicit finance metrics library"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.scikit-build]
cmake.minimum-version = "3.15"
build-dir = "build/{wheel_tag}"
wheel.packages = ["finmetrix"]
